Revision history for VMware::vCloud

NB: Skipped version numbers were never released.


VERSIONTAG DATETAG

  Added:

  Improved:
    Error's now die() with the returned "message" as well as the HTTP code.
  
2.32 2013-03-29

  Added:
    VMware::vCloud - get_task(), list_pvdcs(), wait_on_task()
    VMware::API::vCloud - org_vdc_update(), put(), task_get()

  Improved:
    examples/list-pvds.pl - Now using VMware::vCloud
    VMware::vCloud - get_vdc() now retruns hash or hashref.
    VMware::API::vCloud - added debug levels 2 and 3
    Date format in documentation is now in ISO 8601 format.

2.29 2013-03-25

  Added:
    Acknowledgement of David Gress as a contributor.
    VMware::vCloud - create_catalog(), delete_catalog()
    VMware::API::vCloud - catalog_create(), catalog_get_access(),
      catalog_set_access(), logout()*
	VMware::API::vCloud - POD noting the LoginUrl error.

  Improved:
    Automatic call of logout() on DESTROY if needed.

  * Provided by David Gress
    
2.26 2013-03-19

  Added:
    VMware::API::vCloud - template_get_metadata(), vapp_get_metadata()
    VMware::API::vCloud - Started adding API documentation URLs as comments in 
                          front of each method.

  Improved:
    VMware::vCloud - list_vapps() & list_templates() - Now uses the current login 
      org a a parameter to list_vapps() to avoid pemission errors when logged in 
      as an Org Admin.
    VMware::vCloud - org_create() improved POD, added ldap_mode as a parameter.

2.22 2013-03-14

  Added:
    VMware::vCloud - admin_urls(), debug(), delete_org(), delete_org_network(), 
      delete_vdc(), disable_org(), disable_vdc(), enable_org(), enable_vdc(), 
      extensions(), get_pvdc(), list_external_networks(), list_portgroups(), 
      purge(), vimserver(), webclienturl()

  Improved:
    VMware::vCloud - get_org() - now returns hash or hashref depending on context.
    VMware::vCloud - Improved and reorganized POD.
    POD cleanup and formatting.
